2016-07-01  Jan Beulich  <jbeulich@suse.com>

	* testsuite/gas/i386/movz.s: New.
	* testsuite/gas/i386/movz32.d: New.
	* testsuite/gas/i386/movz64.d: New.
	* testsuite/gas/i386/i386.exp: Run new tests.

2016-07-01  Jan Beulich  <jbeulich@suse.com>

	* config/tc-i386.c (struct _i386_insn): New field memop1_string.
	(md_assemble): Free first memory operand string.
	(i386_index_check): Use repprefixok to distingush xlat from
	other (real) string ops.
	(maybe_adjust_templates): New.
	(i386_att_operand). Call it. Store first memory operand string.
	* config/tc-i386-intel.c (i386_intel_operand): Likewise.
	* testsuite/gas/i386/intel-movs.s: New.
	* testsuite/gas/i386/intel-movs32.d: New.
	* testsuite/gas/i386/intel-movs64.d: New.
	* testsuite/gas/i386/i386.exp: Run new tests. Invoke as for
	64-bits tests with "--defsym x86_64=1 --strip-local-absolute".

2016-06-30  Maciej W. Rozycki  <macro@imgtec.com>

	* config/tc-mips.c (get_append_method): Fix a comment typo.

2016-06-30  Matthew Fortune <Matthew.Fortune@imgtec.com>
	    Maciej W. Rozycki  <macro@imgtec.com>

	* config/tc-mips.c (append_insn) <APPEND_SWAP>: Do not special
	case MIPS16 handling.
	* testsuite/gas/mips/branch-swap-3.d: New test.
	* testsuite/gas/mips/branch-swap-4.d: New test.
	* testsuite/gas/mips/mips16@branch-swap-3.d: New test.
	* testsuite/gas/mips/mips16@branch-swap-4.d: New test.
	* testsuite/gas/mips/micromips@branch-swap-3.d: New test.
	* testsuite/gas/mips/micromips@branch-swap-4.d: New test.
	* testsuite/gas/mips/branch-swap-3.s: New test source.
	* testsuite/gas/mips/mips.exp: Run the new tests.

2016-06-30  Maciej W. Rozycki  <macro@imgtec.com>

	* config/tc-mips.c (append_insn): Simplify non-MIPS16 branch
	swapping sequence.

2016-06-30  Maciej W. Rozycki  <macro@imgtec.com>

	PR gas/20312
	* write.c (subsegs_finish_section): Force no section padding to
	alignment on failed assembly, always set last frag's alignment
	from section.
	* testsuite/gas/all/pr20312.l: New list test.