@@ -76,6 +76,7 @@ if [expr ([istarget "i*86-*-*"] ||  [istarget "x86_64-*-*"]) && [gas_32_check]] 
     run_dump_test "smx"
     run_dump_test "suffix"
     run_dump_test "suffix-intel"
+    run_list_test "suffix-bad"
     run_dump_test "immed32"
     run_dump_test "equ"
     run_dump_test "divide"
@@ -571,6 +572,7 @@ if [expr ([istarget "i*86-*-*"] || [istarget "x86_64-*-*"]) && [gas_64_check]] t
     run_dump_test "x86-64-disp32"
     run_dump_test "rexw"
     run_list_test "x86-64-specific-reg"
+    run_list_test "suffix-bad"
     run_list_test "x86-64-suffix-bad"
     run_dump_test "x86-64-fxsave"
     run_dump_test "x86-64-fxsave-intel"
